fix: close remaining audit gaps for Fortune 500 readiness
Java core fixes:
- fix LazyValue null-value infinite re-initialization (sentinel pattern)
- throw RuntimeException in RenderMachineImpl.finishAndWriteOut() on IOException

Test fixes:
- rewrite DtrLifecycleTest with real @Test methods and real RenderMachineImpl
- fix Java26RealPerformanceBenchmark to call RenderMachine pipeline, not StringBuilder

Build fixes:
- add junit-jupiter-engine + junit-platform-launcher to pom.xml (tests were silently not running)
- add surefire exclusion for *IntegrationTest during unit phase
- dtr-core/pom.xml: add engine dependency directly

Docs cleanup:
- CLAUDE.md: align Java 25/Maven rc-3 version claims, remove Java 26 path reference
- README.md: fix DocTester → DtrTest, align Java version claim
- git rm readme.md (stale: org.dtr namespace, Arquillian, Travis CI)
- git rm README-2.0.0.md (superseded)
- git rm RELEASE_*.md internal planning noise (6 files)

https://claude.ai/code/session_01Jz8HEFr543KWtSYGyZykRn